# slam-faster-lio2

./: .gitignore  install_autostart.sh  setup_can.sh  start_all.sh  start_nav.sh
doc/: fix_ttyACM3.sh  部署与使用教程.md
docs/: bridge_protocol.md
script/: slam-autostart.service  start_all.sh
src/airy_driver/rslidar_msg/: CMakeLists.txt
src/airy_driver/rslidar_sdk/: CMakeLists.txt
src/airy_driver/rslidar_sdk/config/: config.yaml
src/bridge/: CMakeLists.txt  package.xml
src/bridge/config/: bridge_params.yaml
src/bridge/include/bridge/: bridge_node.h  tcp_server.h
src/bridge/launch/: bridge_launch.py
src/bridge/scripts/: gps_noise_analysis.py  nav_cmd.py  trans_download.pcd
src/bridge/scripts/install/: local_setup.sh  setup.sh
src/bridge/src/: bridge_node.cpp  tcp_server.cpp
src/chassis/: CMakeLists.txt
src/chassis/config/: chassis_params.yaml
src/chassis/include/chassis/: chassis_can.h  chassis_node.h  chassis_serial.h
src/chassis/src/: chassis_can.cpp  chassis_node.cpp  chassis_serial.cpp
src/fastlio/src/FAST_LIO_Airy_ROS2-main/src/fast_lio_robosenseAiry/PCD/transPCD/: trans.pcd
src/fastlio/src/FAST_LIO_Airy_ROS2-main/src/fast_lio_robosenseAiry/config/: robosenseAiry.yaml
src/fastlio/src/FAST_LIO_Airy_ROS2-main/src/fast_lio_robosenseAiry/launch/: mapping_robosense_airy.launch.py
src/fastlio/src/FAST_LIO_Airy_ROS2-main/src/fast_lio_robosenseAiry/src/: laserMapping.cpp
src/fastlio/src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/config/: MID360s_config.json
src/location/: package.xml
src/location/Log/: mat_pre.txt
src/location/PCD/: scans.pcd
src/location/PCD/transPCD/: trans.pcd
src/location/config/: mid360.yaml
src/location/launch/: mapping.launch.py  velodyne_localization.launch.py
src/location/rviz/: fastlio_localization.rviz
src/location/scripts/: global_localization.py  global_map_publisher.py  publish_initial_pose.py
src/location/src/: laserMapping.cpp
src/nav_planner/: CMakeLists.txt  package.xml
src/nav_planner/config/: slam_nav_params.yaml
src/nav_planner/include/nav_planner/: slam_nav_node.h
src/nav_planner/include/nav_planner/common/: localization.h  math_utils.h  types.h
src/nav_planner/include/nav_planner/planning/: astar_planner.h  line_planner.h  point_to_point_planner.h
src/nav_planner/include/nav_planner/sdk/: robot_sdk_interface.h
src/nav_planner/include/nav_planner/tracking/: pure_pursuit_tracker.h
src/nav_planner/launch/: slam_nav_debug.launch.py  slam_nav_launch.py
src/nav_planner/rviz/: nav_debug.rviz
src/nav_planner/src/: astar_planner.cpp  line_planner.cpp  localization_gps.cpp  localization_slam.cpp  main.cpp  navigation_state_machine.cpp  point_to_point_planner.cpp  pure_pursuit_tracker.cpp  robot_sdk_interface.cpp  slam_nav_node.cpp
src/pcd2pgm/config/: pcd2pgm.yaml
src/pcd2pgm/include/pcd2pgm/: pcd2pgm.hpp
src/pcd2pgm/launch/: pcd2pgm_launch.py
src/pcd2pgm/pgm/: map.pgm  map.yaml
src/pcd2pgm/rviz/: pcd2pgm.rviz
src/pcd2pgm/src/: pcd2pgm.cpp
src/rtk/: CMakeLists.txt  package.xml
src/rtk/config/: rtk_params.yaml
src/rtk/include/rtk/: rtk_node.hpp
src/rtk/launch/: rtk_launch.py
src/rtk/src/: main.cpp
src/src/bridge/scripts/: pcd_receiver_test.py
src/src/bridge/src/: main.cpp
src/src/chassis/: package.xml
src/src/location/: CMakeLists.txt
src/src/location/config/: mid360.yaml
src/src/location/include/: common_lib.h
src/src/location/launch/: velodyne_localization.launch.py
src/src/nav_planner/include/nav_planner/fsm/: navigation_state_machine.h
src/src/rtk/config/: rtk_params.yaml
src/src/rtk/launch/: rtk_launch.py
src/src/vru_sensor/config/: vru_params.yaml
src/src/vru_sensor/src/: vru_node.cpp
src/vru_sensor/: CMakeLists.txt  package.xml
src/vru_sensor/config/: vru_params.yaml
src/vru_sensor/launch/: vru.launch.py
src/vru_sensor/scripts/: vru_test.py
src/vru_sensor/src/: vru_node.cpp
